[FIND-486] added extra padding for the search bar to avoid cursor being cut off. [rev:alex.scown]

--- a/core/src/main/public/static/css/app-include.css
+++ b/core/src/main/public/static/css/app-include.css
@@ -1190,7 +1190,7 @@ input.find-input[type="text"], input.find-input[type="text"]:focus {
     box-shadow: none;
     border-radius: 0;
     height: 30px;
-    padding-right: 40px;
+    padding-right: 50px;
 }
 
 input::-webkit-input-placeholder,
